# assets-checker

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
assets_checker/: bitflyer.py  monex.py  sbi.py
handler/: handler.py  sbi.py
tests/: test_assets_checker2.py
