[tool.poetry]
name = "assets-checker"
version = "1.0.3"
description = ""
authors = ["Yoiduki <90896806+y-muen@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.3"
tqdm = "^4.64.0"
pybitflyer = "^0.1.9"
lxml = "^4.8.0"
bs4 = "^0.0.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
